# secure-q-digest

./: CMakeLists.txt  README.md  alice_script.sh  alice_script_r.sh  bob_script.sh  bob_script_r.sh  merge-result-check.sh  recompile.sh
q-digest-mpc/: q-digest-mpc.h  q_digest_node.h
test/: CMakeLists.txt  commands  func-test.cpp  merge-result-check.cpp  parse-utils.h  q-digest-example.cpp  q-digest-ocheck.cpp
